# swisspipe

./: .dockerignore  .env.example  .gitignore  ADMIN_API_LOGGING.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  aidesigner.md  async_prd.md  build.sh  cookies.txt  cookies3700.txt  debug_node_output.md  design_backend.md  design_frontend.md  execution_tracing_prd.md  perf.sh  prd_HumanInLoop.md  prd_backend.md  prd_email.md  prd_loop.md  prd_simplified_termination_conditions.md  rough_async_prd.md  rough_fronend.md  simple_delay_test.sh  technical_design_hil.md  test_blocking_verification.sh  test_conditional_workflow.sh  test_custom_start_node.sh  test_delay_workflow.sh  test_email_workflow.sh  test_http_loop_integration_final.sh  test_minimal_http_loop.sh  test_multi_input_transformer.sh  test_node_output_flow.js  test_node_output_propagation.sh  test_performance.sh  test_request.json  test_worker_pool.sh  (+1 more)
data/: swisspipe.sqbpro
docs/: ENV-VARS-STATUS.md  IMPLEMENTATION-Environment-Variables.md  IMPLEMENTATION-GUIDE-Version-History.md  PRD-Environment-Variables.md  PRD-Node-Toolbar-Creation.md  PRD-Workflow-Version-History-REVIEW.md  PRD-Workflow-Version-History.md  PRD_CRON_SCHEDULE_TRIGGER.md  README.md  WORKFLOW_VERSION_HISTORY_STATUS.md  api-documentation.html  openapi.yaml  serve-docs.py
frontend/: .env.development  .env.example  README.md  index.html  package-lock.json  package.json  past.md  playwright.config.ts  tailwind.config.ts  vite.config.ts
prd/: HTTP_LOOP_TEST_RESULTS.md  design_frontend.md  event-source-tracking.md  prd_backend.md  prd_email.md  rough.md
src/: lib.rs  main.rs  main.rs.bak
test_scripts/: perf.sh  test_email_cleanup.rs  test_event_templating.sh  test_performance.sh  test_timeout_fixes.sh
tests/: test_cleanup_service.rs  test_condition_execution.rs  test_email_reply_to_diagnostic.rs  test_email_reply_to_header.rs  test_email_template.rs  test_environment_variables.rs  test_http_loop_blocking_integration.rs  test_http_loop_blocking_simple.rs  test_http_loop_phase1_phase2.rs  test_human_in_loop_integration.rs  test_large_workflow_operations.rs  test_multiple_inputs.rs  test_source_tracking.rs  (+2 more)
(+246 files in other folders)
