[package]
name = "swisspipe"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
rquickjs = { version = "0.4", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"

# Email dependencies
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
handlebars = "4.0"
mime = "0.3"
validator = { version = "0.16", features = ["derive"] }
html-escape = "0.2"
governor = "0.6"
tokio-util = { version = "0.7", features = ["time"] }
futures = "0.3"
# tokio-cron-scheduler = "0.10"  # Causing stack overflow - disabled

# Google OAuth dependencies
oauth2 = "4.4"
jsonwebtoken = "9.0"
rand = "0.8"
url = "2.4"
